pkg/provider/kubernetes/ingress/fixtures/Ingress-with-port-invalid-for-one-service.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
    - host: traefik.port
      http:
        paths:
          - path: /port
            backend:
              service:
                name: service1
                port:
                  number: 8080
            pathType: Prefix

---
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: testing

spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http-api
    - name: http-admin
      port: 8079
      protocol: TCP
      targetPort: http-admin
  selector:
    app: foo
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: v1
kind: Endpoints
metadata:
  name: service1
  namespace: testing
subsets:
  - addresses:
      - ip: 10.0.0.1
        nodeName: admin.whoami.service1
    ports:
      - name: http-admin
        port: 8079
        protocol: TCP
  - addresses:
      - ip: 10.0.0.1
        nodeName: whoami.service1
    #        targetRef:
    ports:
      - name: http
        port: 8080
        protocol: TCP

---
kind: EndpointSlice
apiVersion: discovery.k8s.io/v1
metadata:
  name: service1-abc
  namespace: testing
  labels:
    kubernetes.io/service-name: service1

addressType: IPv4
ports:
  - name: http-admin
    port: 8079
    protocol: TCP
endpoints:
  - addresses:
      - 10.0.0.1
    conditions:
      ready: true
    nodeName: admin.whoami.service1

---
kind: EndpointSlice
apiVersion: discovery.k8s.io/v1
metadata:
  name: service1-def
  namespace: testing
  labels:
    kubernetes.io/service-name: service1

addressType: IPv4
ports:
  - name: http
    port: 8080
    protocol: TCP
endpoints:
  - addresses:
      - 10.0.0.1
    conditions:
      ready: true
    nodeName: whoami.service1
